--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/AgroServ.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.pdfbox-app-2.0.11.jar=D:\\pdfbox-app-2.0.11.jar
 file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
@@ -37,7 +38,8 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.eclipselink.classpath}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.pdfbox-app-2.0.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
