--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.pdfbox-app-2.0.11.jar=D:\\pdfbox-app-2.0.11.jar
+file.reference.pdfbox-app-2.0.11.jar-1=C:\\Users\\User\\Desktop\\lib\\pdfbox-app-2.0.11.jar
 file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
@@ -39,7 +40,8 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.pdfbox-app-2.0.11.jar}
+    ${file.reference.pdfbox-app-2.0.11.jar}:\
+    ${file.reference.pdfbox-app-2.0.11.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
