Se agrego edicion al Jtable de GenerarVenta

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,6 @@ dist.jar=${dist.dir}/AgroServ.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.pdfbox-app-2.0.11.jar=D:\\pdfbox-app-2.0.11.jar
-file.reference.pdfbox-app-2.0.11.jar-1=C:\\Users\\User\\Desktop\\lib\\pdfbox-app-2.0.11.jar
 file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
@@ -40,8 +38,7 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.pdfbox-app-2.0.11.jar}:\
-    ${file.reference.pdfbox-app-2.0.11.jar-1}
+    ${libs.pdfbox_2.0.11.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
