--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${libs.beans-binding.classpath}:\
-    ${libs.pdfbox_2.0.11.classpath}
+    ${libs.pdfbox_2.0.11.classpath}:\
+    ${libs.MyJasperReport.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
